# mod_dup

./: .gitignore  AUTHORS  CMakeLists.txt  README  README.md  TODO  libapache2-mod-compare.install  libapache2-mod-dup.install  libapache2-mod-migrate.install
cmake/: Include.cmake  coverage-clean.cmake.in  coverage-history.cmake.in  coverage-test.cmake.in
cmake/modules/: FindCURL.cmake  FindJsonCPP.cmake  FindPnsJsonCPP.cmake  Findcppunit.cmake
conf/: CMakeLists.txt  compare.conf.example  compare.load  compare_test.conf  dup.conf.example  dup.load  dup_test.conf  dup_test_vhost  migrate.conf  migrate_test.conf  migrate_test.load  migrate_test_vhost  migrate_test_vhost.conf
debian/: changelog  control  copyright  libapache2-mod-compare.conffiles  libapache2-mod-compare.dirs  libapache2-mod-compare.install  libapache2-mod-compare.links  libapache2-mod-dup-migrate-validation.install  libapache2-mod-dup-migrate-validation.postinst  libapache2-mod-dup.conffiles  libapache2-mod-dup.dirs  libapache2-mod-dup.install  libapache2-mod-dup.links  libapache2-mod-migrate.dirs  libapache2-mod-migrate.install  libapache2-mod-migrate.links  libws-diff.install  libws-diff.postinst  rules
docs/: CMakeLists.txt  Doxyfile.in  USAGE.md
docs/design/src/: copy_with_answer.puml  copy_without_answer.puml  decoration.puml  dup_migrate_apache_calls.puml  dup_migrate_not_migrated_apache_calls.puml  dup_migrate_request_migrated_apache_calls.puml
src/: CMakeLists.txt  CassandraDiff.cc  CassandraDiff.h  Log.cc  Log.hh  MultiThreadQueue.cc  MultiThreadQueue.hh  RequestCommon.cc  RequestCommon.hh  RequestInfo.cc  RequestInfo.hh  RequestProcessor.cc  RequestProcessor.hh  ThreadPool.cc  ThreadPool.hh  UrlCodec.cc  UrlCodec.hh  Utils.cc  Utils.hh  deserialize.cc  deserialize.hh  filters.cc  filters_compare.cc  filters_dup.cc  filters_migrate.cc  mod_compare.cc  mod_compare.hh  mod_dup.cc  mod_dup.hh  mod_migrate.cc  mod_migrate.hh  response_diff.cc  subReqMgr.hh
src/libws_diff/: CMakeLists.txt  customPrinter.hpp  mapCompare.cc  mapCompare.hh  stringCompare.cc  stringCompare.hh
src/libws_diff/DiffPrinter/: CMakeLists.txt  diffPrinter.cc  diffPrinter.hh  jsonDiffPrinter.cc  jsonDiffPrinter.hh  multilineDiffPrinter.cc  multilineDiffPrinter.hh  utf8JsonDiffPrinter.cc  utf8JsonDiffPrinter.hh
testing/functionnal/: CMakeLists.txt  README.md  TestMigrate.jmx  build.sh  build_comp.sh  build_dup.sh  env.sh  env_compare.sh  env_migrate.sh  httpd.compare_conf.templ  httpd.conf.templ  httpd.migrate_conf.templ  local_env.sh  local_env_compare.sh  print_content.cgi  soli_response  test.cgi  test_compare.sh  test_dup.py  test_framework_schema.graphml  test_framework_sequence.plantuml  test_migrate.sh  test_migrate_for_jenkins.sh  test_migrate_vhost  validation.sh
testing/functionnal/data/: largeresponse  soli
testing/functionnal/data/compare/: compare.conf.tpl  compare.jmx  delayed_response.cgi  print_http_headers.cgi  results.jtl
testing/functionnal/data/compare/www/: comp_test2  comp_truncate
testing/functionnal/data/dup/0/requests/: 004.req  007.req  008.req  010.req  013.req  014.req  016.req  017.req  019.req  021.req  do
testing/functionnal/data/dup/1/: dup.conf
testing/functionnal/data/dup/1/requests/: 001.req  002.req
testing/functionnal/data/dup/general/: dup.conf
testing/functionnal/data/dup/general/requests/: 001.req  002.req  003.req  005.req  006.req  007.req  008.req  009.req  011.req  012.req  013.req  014.req  015.req  016.req  017.req  018.req  020.req  021.req  022.req  023.req  024.req  025.req  026.req  027.req
testing/functionnal/data/dup/general/requests/bak/: 001.req  002.req  004.req  009.req  010.req  018.req  019.req  023.req  025.req
testing/functionnal/data/dup/migration_mode/: dup.conf
testing/functionnal/data/dup/migration_mode/requests/: 001.req  002.req  003.req  004.req  005.req
testing/functionnal/data/dup/migration_mode/requests/bak/: 001.req  002.req  005.req
testing/functionnal/data/dup/requests/: 001.req  002.req  003.req  004.req  005.req  006.req  007.req  008.req  009.req  010.req  011.req  012.req  013.req  014.req  015.req  016.req  017.req  018.req  019.req  020.req  021.req  022.req  023.req  024.req  025.req  026.req  027.req  028.req  029.req  030.req  031.req  100.req  fullcompo.req
testing/functionnal/data/dup/validation_mode/: dup.conf
testing/functionnal/data/dup/validation_mode/requests/: 004.req  005.req
testing/functionnal/data/dup/validation_mode/requests/bak/: 001.req  002.req  005.req
testing/functionnal/data/dup/www/: compare  enrich  get_body_size.cgi  header_and_body  header_only  largeresponse  method  multi  rewritten  service_np1  timeout
testing/functionnal/data/migrate/: migrate.conf  test_migrate.jmx
testing/libws_diff/: CMakeLists.txt  testRunner.cc  testWsMapDiff.cc  testWsMapDiff.hh  testWsStringDiff.cc  testWsStringDiff.hh
testing/libws_diff/DiffPrinter/: CMakeLists.txt  testJsonDiffPrinter.cc  testJsonDiffPrinter.hh
testing/mock/: CMakeLists.txt  dup_mock.cc  dup_mock.load
testing/unit/: ApacheCopyPaste.cc  ApacheStubs.cc  CMakeLists.txt  CurlStubs.cc  TfyTestRunner.hh  testBodies.cc  testBodies.hh  testContextEnrichment.cc  testContextEnrichment.hh  testFilters.cc  testFilters.hh  testLog.cc  testModCompare.cc  testModCompare.hh  testModDup.cc  testModDup.hh  testModMigrate.cc  testModMigrate.hh  testMultiThreadQueue.hh  testRequestProcessor.cc  testRequestProcessor.hh  testThreadPool.cc  testUrlCodec.cc  testUrlCodec.hh  urlCodec.cc
tools/: cmpdiffx
tools/Log_Compare/: CMakeLists.txt  Log_Compare_json.conf  README.md  (+3 more)
tools/libws_diff/: CMakeLists.txt  lib_compare.cc
unit/: ApacheStubs.cc  CMakeLists.txt  testBodies.hh  testContextEnrichment.cc  testContextEnrichment.hh  testFilters.cc  testFilters.hh  testLog.cc  testLog.hh  testModCompare.cc  testModCompare.hh  testModDup.cc  testModDup.hh  testMultiThreadQueue.cc  testMultiThreadQueue.hh  testRequestProcessor.cc  testRequestProcessor.hh  testRunner.cc  testThreadPool.cc  testThreadPool.hh  testUrlCodec.cc  urlCodec.cc  urlCodec.hh
